feat(utils): add get-channel-id script for channel discovery and document usage
- Implements scripts/get-channel-id.ts for fetching YouTube channel ID by handle or search
- Updates README and development-tracking with usage and workflow
- Adds npm script for easy access
- Improves logger chalk loading for reliability
- Adds data/ to .gitignore to protect local data

--- a/env.example
+++ b/env.example
@@ -6,6 +6,7 @@ YOUTUBE_CLIENT_SECRET=your_oauth_client_secret_here
 YOUTUBE_REDIRECT_URI=http://localhost:3000/auth/callback
 
 # Channel Configuration
+# Find your YouTube user & channel IDs: https://support.google.com/youtube/answer/3250431?hl=en
 YOUTUBE_CHANNEL_ID=your_channel_id_here
 
 # Application Settings
