--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "tsc",
     "dev": "tsx",
     "start": "node dist/index.js",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:patterns": "tsx tests/run-pattern-tests.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "get-channel-id": "tsx scripts/get-channel-id.ts",
