--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20.8.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
